# sol_job_program

./: Anchor.toml  README.md  package-lock.json  package.json
anchor-solana/: Anchor.toml  package-lock.json  readme  readme.md  recover.json
anchor-solana/programs/anchor-solana/: Cargo.toml
anchor-solana/programs/anchor-solana/src/: lib.rs
anchor-solana/tests/: anchor-solana.ts  solana_lamport_transfer.ts
libraries/: system_instruction.sol
solidity/: first_solana_contract.sol  sol_job_program.sol  solva.sol  solva_deposit.sol  test.sol
tests/: expert-cancel.ts  first_solana_contract.ts  indemnitee-maker.ts  indemnitee-taker.ts  normal.ts  platform-force-close-for-client.ts  platform-force-close-for-expert.ts  sol_job_program.ts
