[package]
name = "anchor-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_solana"


[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.18.8"
mpl-token-metadata = "4.1.2"


[programs.localnet]
sol_job_program = "59iDUfJYQGN2SBVB6aAvD6vPgKVbu9kxntkKrZ1cWKo8"

[programs.devnet]
sol_job_program = "59iDUfJYQGN2SBVB6aAvD6vPgKVbu9kxntkKrZ1cWKo8"


[registry]
url = "https://api.apr.dev"

[provider]
cluster = "devnet"
wallet = "/home/outsider/.config/solana/id.json"
