[package]
name = "anchor-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_solana"


[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.18.8"
mpl-token-metadata = "4.1.2"


[programs.localnet]
solana_lamport_transfer = "6nouU53m9Q6AuKSV5zYwP9aTwPq2xN6Bt9tSvv8yBY2F"

[programs.devnet]
solana_lamport_transfer = "6nouU53m9Q6AuKSV5zYwP9aTwPq2xN6Bt9tSvv8yBY2F"


[registry]
url = "https://api.apr.dev"

[provider]
cluster = "devnet"
wallet = "/home/outsider/.config/solana/id.json"
